tests/NormalTests/paczka1/fuzzy1/63090892.err
Error in line 2: yKofqOKY S909 8,7
Error in line 1: H55iMuk1RP A752 83,5
Error in line 5: yKofqOKY A752 32,8
Error in line 17: A838 S493 96,0
Error in line 32: ggArTbzJr A838 12,0
Error in line 31: yKofqOKY S493 323,9
Error in line 33: ggArTbzJr S493 3,8
Error in line 38: A838 A838 272,4
